<resources>
    <string name="app_name">Lima Taxi Fares</string>
    <string name="action_settings">Settings</string>
    <string name="origin_title">FROM</string>
    <string name="destination_title">TO</string>
    <string name="address_hint">... or enter an address</string>
    <string name="poi_selector">select a point of interest...</string>
    <string name="enter_an_address">... or enter an address</string>

    <string name="spinner_header">Pick a spot...</string>

    <string name="museo_larco">Larco Museum</string>
    <string name="museo_oro">Gold Museum</string>
    <string name="parque_kennedy">Park Kennedy</string>
    <string name="barranco">Center of Barranco</string>
    <string name="aeropuerto">Airport</string>
    <string name="plaza_san_martin">Plaza San Martín</string>
    <string name="larcomar">Larcomar</string>
    <string name="parque_aguas">Parque de las Aguas</string>
    <string name="huaca_pucllana">Huaca Pucllana</string>
    <string name="huaca_huallamarca">Huaca Huallamarca</string>

    <string name="get_rate_button_text">Calculate the normal rate</string>
    <string name="duration_header_string">Duration</string>
    <string name="distance_header_string">Distance</string>
    <string name="normal_rate_header_string">Rate</string>
    <string name="min_rate_header_string">standard</string>
    <string name="max_rate_header_string">rush hour - nighttime</string>
    <string name="duration_unit">min</string>
    <string name="distance_unit">km</string>
    <string name="rate_unit">Soles</string>
    <string name="from_header_string">From ...</string>
    <string name="to_header_string">To ...</string>
    <string name="test_config">huuhuh</string>




</resources>
