<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/rate_header"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/normal_rate_header_string"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/rate_unit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/rate_unit"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/min_header"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="4"
            android:text="@string/min_rate_header_string"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/min_rate_value"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text=""
            android:textColor="@color/red"
            android:textSize="20sp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/max_rate_header"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="4"
            android:text="@string/max_rate_header_string"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/max_rate_value"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text=""
            android:textColor="@color/red"
            android:textSize="20sp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/duration_header"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/duration_header_string"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/duration_value"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/duration_unit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/duration_unit"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal"
        >


        <TextView
            android:id="@+id/distance_header"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/distance_header_string"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/distance_value"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/distance_unit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/distance_unit"
            android:textSize="24sp"/>

    </LinearLayout>




    <TextView
        android:id="@+id/from_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_header_string"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/from_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/to_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_header_string"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/to_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="16sp" />

</LinearLayout>