<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity" android:orientation="vertical">

    <TextView android:text="@string/origin_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <com.example.android.taxi_fares_lima.MySpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/origin_spinner" />

    <!-- Clickable title -->
    <TextView  android:id="@+id/toggler1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Or enter an address..."
        android:clickable="true"
        android:onClick="toggle_contents"
        android:tag="1"/>

    <!--content to hide/show -->
    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter the starting point" >
    </AutoCompleteTextView>

    <TextView android:text="@string/destination_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <com.example.android.taxi_fares_lima.MySpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/destination_spinner" />

    <!-- Clickable title -->
    <TextView  android:id="@+id/toggler2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Or enter an address..."
        android:clickable="true"
        android:onClick="toggle_contents"
        android:tag="2"/>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter the destination" >
    </AutoCompleteTextView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_rate_button_text"
        android:id="@+id/get_rate_button" />

</LinearLayout>
