<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_left_headers"
            android:text="@string/origin_title"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:src="@drawable/from_icon" />

    </LinearLayout>

        <Spinner
            android:id="@+id/origin_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_top_first_inner_box"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/margin_bottom_top_first_inner_box" />


        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_boxes"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/address_hint"
            android:textColor="@color/darkgrey"
            android:textColorHint="@color/darkgrey"
            android:textSize="@dimen/text_size_standard"
            android:textStyle="italic">
        </AutoCompleteTextView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_left_headers"
            android:text="@string/destination_title"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:src="@drawable/to_icon" />

    </LinearLayout>

        <Spinner
            android:id="@+id/destination_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_top_first_inner_box"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/margin_bottom_top_first_inner_box" />


        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_boxes"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/address_hint"
            android:textColor="@color/darkgrey"
            android:textColorHint="@color/darkgrey"
            android:textSize="@dimen/text_size_standard"
            android:textStyle="italic">
        </AutoCompleteTextView>



    <Button
        android:id="@+id/get_rate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/get_rate_button_text"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"/>

</LinearLayout>